2008-10-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.dll.sources
	* Mono.Cecil.csproj
	* Mono.Cecil/AssemblyStripper.cs
	* Mono.Cecil.Cil/CodeWriter.cs
	* Mono.Cecil.Metadata/MetadataWriter.cs: add a new AssemblyStripper
	class to be used by a tool to empty method bodies for assemblies
	that have been AOTed.

2008-09-29  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericParameter.cs: override TypeReference.Scope.

2008-09-25  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Binary/MemoryBinaryWriter.cs: Make sure QuadAlign
	properly enlarge the memory stream if needed.
	Patch by Regis Vaquette <rvaquette@yahoo.fr>.

2008-09-18  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs (GetModifierType): protect against
	zero rids.

2008-09-15  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: fix regression
	in reading custom mods.

2008-09-04  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: better read modifiers on
	return types and parameters.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Metadata/UserStringsHeap.cs: fix reading of some unicode fu.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/MethodAttributes.cs: add CheckAccessOnOverride.
	* Mono.Cecil/MethodDefinition.cs: add IsCheckAccessOnOverride.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/GenericParameter.cs: fix Has*Constraint properties.

2008-09-02  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/SecurityDeclarationReader.cs: fix reading
	multiple permissions. Patch by Carsten Keutmann.

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil/ReflectionReader.cs: properly compose mod and byref types
	for parameters and return types.
	Based on a patch by Carlo Kok <ck@remobjects.com>

2008-09-01  Jb Evain  <jbevain@novell.com>

	* Mono.Cecil.Signatures/SignatureReader.cs: Avoid a crash
	when looking for an enumeration definition when the assembly